[gd_scene load_steps=15 format=3 uid="uid://qde0e5mwnany"]

[ext_resource type="Script" uid="uid://bxn5segpvyh4e" path="res://Scene/User Interfaces/UI Scripts/button_manager.gd" id="1_kxbd2"]
[ext_resource type="Texture2D" uid="uid://cdfpkjhi1gi77" path="res://Asset/User Interface/button_ui.png" id="2_eh1oq"]
[ext_resource type="FontFile" uid="uid://dtdw2k1jvjn37" path="res://Asset/Fonts/times.ttf" id="2_jykwv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jykwv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qrawm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4mbs0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nbfal"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_87orj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yu5iq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_eh1oq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4wod1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qelcm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mdbvn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xyor1"]

[node name="MainMenu" type="Node2D"]

[node name="ButtonManager" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_kxbd2")

[node name="Start Battle" type="Button" parent="ButtonManager"]
layout_mode = 0
offset_left = 900.0
offset_top = 121.0
offset_right = 1087.0
offset_bottom = 210.0
theme_override_fonts/font = ExtResource("2_jykwv")
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxEmpty_jykwv")
theme_override_styles/hover = SubResource("StyleBoxEmpty_qrawm")
text = "Start/Battle
"
icon = ExtResource("2_eh1oq")
icon_alignment = 1
expand_icon = true

[node name="Inventory and Shop" type="Button" parent="ButtonManager"]
layout_mode = 0
offset_left = 2.0
offset_top = 522.0
offset_right = 210.0
offset_bottom = 609.0
theme_override_fonts/font = ExtResource("2_jykwv")
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxEmpty_4mbs0")
theme_override_styles/hover = SubResource("StyleBoxEmpty_nbfal")
text = "Inventory/Shop
"
icon = ExtResource("2_eh1oq")
icon_alignment = 1
expand_icon = true

[node name="Characters" type="Button" parent="ButtonManager"]
layout_mode = 0
offset_left = 408.0
offset_top = 527.0
offset_right = 605.0
offset_bottom = 608.0
theme_override_fonts/font = ExtResource("2_jykwv")
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxEmpty_87orj")
theme_override_styles/hover = SubResource("StyleBoxEmpty_yu5iq")
text = "Characters"
icon = ExtResource("2_eh1oq")
icon_alignment = 1
expand_icon = true

[node name="Tutorial" type="Button" parent="ButtonManager"]
layout_mode = 0
offset_left = 206.0
offset_top = 528.0
offset_right = 408.0
offset_bottom = 608.0
theme_override_fonts/font = ExtResource("2_jykwv")
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxEmpty_eh1oq")
theme_override_styles/hover = SubResource("StyleBoxEmpty_4wod1")
text = "Tutorial
"
icon = ExtResource("2_eh1oq")
icon_alignment = 1
expand_icon = true

[node name="Settings" type="Button" parent="ButtonManager"]
layout_mode = 0
offset_left = 894.0
offset_top = 203.0
offset_right = 1091.0
offset_bottom = 277.0
theme_override_fonts/font = ExtResource("2_jykwv")
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxEmpty_qelcm")
theme_override_styles/hover = SubResource("StyleBoxEmpty_mdbvn")
text = "Settings"
icon = ExtResource("2_eh1oq")
icon_alignment = 1
expand_icon = true

[node name="Quit" type="Button" parent="ButtonManager"]
layout_mode = 0
offset_left = 865.0
offset_top = 277.0
offset_right = 1120.0
offset_bottom = 350.0
theme_override_fonts/font = ExtResource("2_jykwv")
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxEmpty_87orj")
theme_override_styles/hover = SubResource("StyleBoxEmpty_xyor1")
text = "Quit
"
icon = ExtResource("2_eh1oq")
icon_alignment = 1
expand_icon = true

[connection signal="pressed" from="ButtonManager/Start Battle" to="ButtonManager" method="_on_start_battle_pressed"]
[connection signal="pressed" from="ButtonManager/Inventory and Shop" to="ButtonManager" method="_on_inventory_and_shop_pressed"]
[connection signal="pressed" from="ButtonManager/Characters" to="ButtonManager" method="_on_characters_pressed"]
[connection signal="pressed" from="ButtonManager/Tutorial" to="ButtonManager" method="_on_tutorial_pressed"]
[connection signal="pressed" from="ButtonManager/Settings" to="ButtonManager" method="_on_settings_pressed"]
[connection signal="pressed" from="ButtonManager/Quit" to="ButtonManager" method="_on_quit_pressed"]
